B-F Sandbox Full-Backup/src/objects/Wholesaler_Orders_Junction__c.object
<CustomObject>
    <description>This is a junction between wholesaler and order.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Returns Account Name on the wholesaler order junction object.</description>
        <formula>Order__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <description>Returns the order date in the wholesaler junction object.</description>
        <formula>Order__r.Order_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <formula>Order__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Wholesaler Orders</relationshipLabel>
        <relationshipName>Wholesaler_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Name__c</fullName>
        <description>Returns wholesaler name in the wholesaler junction object.</description>
        <formula>Wholesaler__r.Wholesaler_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wholesaler Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <referenceTo>Wholesaler__c</referenceTo>
        <relationshipLabel>Wholesaler Orders</relationshipLabel>
        <relationshipName>Wholesaler_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wholesaler Orders</label>
    <nameField>
        <displayFormat>WO-{0}</displayFormat>
        <label>Wholesaler Orders Junction Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wholesaler Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>